# torisetsu

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  project_spec.md
backend/: .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  README_GEMINI.md  alembic.ini  config.py  create_test_user.py  delete_manual.py  delete_manual_daisuke.py  delete_manual_fixed.py  init_db.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4248d87c7fa9_remove_project_description.py  51ea96f8c3cb_remove_username_unique_constraint.py  76ca640139c4_add_torisetsu_table_and_update_manual_.py  7f8d4c4565ce_convert_ids_from_integer_to_string_uuid.py  ad07150f8f57_remove_workspace_tables.py  b67b6c894346_remove_category_from_projects.py  cc8ee0cfc751_add_share_token_to_manuals.py  dfcfe4ee3285_remove_description_from_torisetsu.py  eff233a339fd_add_audio_file_path_to_manuals.py
backend/models/: __init__.py  manual.py  project.py  torisetsu.py  user.py
backend/routers/: __init__.py  auth.py  auth_firebase.py  manuals.py  projects.py  torisetsu.py  upload.py  wizard.py
backend/schemas/: __init__.py  manual.py  project.py  torisetsu.py  user.py  wizard.py  workspace.py
backend/services/: gemini_service.py
backend/utils/: auth.py  firebase_config.py
frontend/: .env.example  .eslintrc.json  .prettierignore  Dockerfile  Makefile  README.md  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: PrivateRoute.tsx  SetupWizard.tsx
frontend/src/config/: firebase.ts
frontend/src/constants/: app.ts
(+36 files in other folders)
